2005-02-10  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed time bug for when file started in middle.

2005-02-09  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: added some image processing for handling low-light datasets.
	* clipraw.m: added.  cuts out and saves a range of frames as a new RAW file.

2005-01-26  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: added.  runs and saves single or batches of max(min)imum intensity projection images.  This function calls mip.m and is for batch processing only.

2005-12-20  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: set the output of the function to the last image processed.  Useful for immediately looking at an image after conversion.

2004-12-09  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed a bug I introduced by fixing off-by-one error.

2004-12-07  Jeremy Cribb <jcribb@email.unc.edu>
	* balance_pulnix_gains.m: added.  sometimes the image looks banded even after the line-swapping problem is confirmed fixed.  The gains between the two channels on the Pulnix may be off.  You can actually fix this in the camera (where I'm headed after I finish with the data I've already taken).

2004-12-06  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed off-by-one error in frame id.

2004-12-01  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed error in time calculation.
	* raw2avi.m: removed MPEG4 compression until I can make it actually work.

2004-12-01  Jeremy Cribb <jcribb@email.unc.edu>
	* Added mip.m.  Calculates and displays/returns minimum or maximum intensity projection for avi, raw, or stacks of images.

2004-11-29  Jeremy Cribb <jcribb@email.unc.edu>
	* Added playback_data.m.  Creates .avi video of dataset.  Useful for making animations that describe a bead path (beating cilia, for example).
	* Added raw2avi, which replaces make_pulnix_movie.  
	* Removed make_pulnix_movie.

2004-09-22  Jeremy Cribb <jcribb@email.unc.edu>